[package]
name = "mydi"
version = "0.2.1"
edition = "2018"
authors = ["Borisenko Andrei m0hct3r@gmail.com"]
readme = "README.md"
keywords = ["dependency", "injection", "di"]
categories = ["config", "rust-patterns"]
repository = "https://github.com/a14e/mydi"
license = "MIT OR Apache-2.0"
description = "MyDI. Dependency Injection library"



[dependencies]
anyhow = "1.0.69"
once_cell = "1.17.1"
parking_lot = "0.12.1"

mydi_macros = { path = "./macros" , version = "0.2.1"  }

[dev-dependencies]
dyn-clone = "1.0.11"

