[package]
name = "mydi"
version = "0.2.3"
edition = "2018"
authors = ["Borisenko Andrei m0hct3r@gmail.com"]
readme = "README.md"
keywords = ["dependency", "injection", "di"]
categories = ["config", "rust-patterns"]
repository = "https://github.com/a14e/mydi"
license = "MIT OR Apache-2.0"
description = "MyDI. Dependency Injection library"



[dependencies]
anyhow = "1.0.86"
once_cell = "1.19.0"
parking_lot = "0.12.3"

mydi_macros = { path = "./macros" , version = "0.2.3"  }

[dev-dependencies]
dyn-clone = "1.0.17"

