[package]
name = "mydi"
version = "0.2.4"
edition = "2018"
authors = ["Borisenko Andrei m0hct3r@gmail.com"]
readme = "README.md"
keywords = ["dependency", "injection", "di"]
categories = ["config", "rust-patterns"]
repository = "https://github.com/a14e/mydi"
license = "MIT OR Apache-2.0"
description = "MyDI. Dependency Injection library"



[dependencies]
anyhow = "1.0.100"
once_cell = "1.21.3"
parking_lot = "0.12.5"

mydi_macros = { path = "./macros" , version = "0.2.3"  }

[dev-dependencies]
dyn-clone = "1.0.20"

