[package]
name = "mydi_macros"
version = "0.1.0"
edition = "2021"
authors = ["Borisenko Andrei m0hct3r@gmail.com"]
readme = "../README.md"
keywords = ["dependency", "injection", "di"]
categories = ["config", "rust-patterns"]


[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"
