[package]
name = "mydi_macros"
version = "0.1.2"
edition = "2021"
authors = ["Borisenko Andrei m0hct3r@gmail.com"]
readme = "../README.md"
keywords = ["dependency", "injection", "di"]
categories = ["config", "rust-patterns"]
repository = "https://github.com/a14e/mydi"
description = "Macroses for MyDI library"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"
